[package]
name = "checkssl"
version = "0.2.3"
authors = ["Aldi Perdana <aldidana@gmail.com>, Caleb Smith <calebsmithwoolrich@gmail.com>"]
edition = "2018"
description = "Check ssl certificate"
repository = "https://github.com/pixelcoda/checkssl/"
license = "MIT"
keywords = ["ssl", "checkssl", "check-site-ssl"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.18.1"
webpki-roots = "0.20.0"
webpki = "0.21.3"
x509-parser = "0.8.0-beta4"
chrono = { version = "0.4.13", features = [ 'serde' ] }
serde = { version = "1.0.114", features = [ 'derive' ] }
savefile = "*"
savefile-derive="*"
sha2 = "0.10"
sha1 = "0.10"
serde_json = "1.0"
rustls-pemfile = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt"] }

[[bin]]
name = "checkssl"
path = "src/bin/checkssl-cli.rs"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
criterion = "0.5"

[[bench]]
name = "ssl_benchmarks"
harness = false